# project-streamforge

./: .env.example  .gitignore  ENVIRONMENT.md  README.md  build-and-push.sh
admin/: README.md  commands.go  main.go
admin/cmd/: consume.go  produce.go  root.go  topic.go
admin/server/: rest.go
broker/: Cargo.toml  build.rs
broker/src/: lib.rs  main.rs
broker/src/cluster/: heartbeat.rs  membership.rs  metadata.rs  mod.rs
broker/src/config/: mod.rs
broker/src/metrics/: mod.rs
broker/src/network/: client.rs  mod.rs  protocol.rs  server.rs
broker/src/partition/: manager.rs  mod.rs  offset.rs
broker/src/replication/: follower.rs  leader.rs  log_sync.rs  mod.rs
broker/src/storage/: ffi.rs  mod.rs
broker/tests/: integration_tests.rs
docker/: admin.Dockerfile  broker.Dockerfile  docker-compose.yml  prometheus.yml
docs/: api.html  architecture.html  configuration.html  deployment.html  getting-started.html  index.html  performance.html  protocol.html  style.css
proto/: admin.proto  broker.proto  replication.proto
sdk-go/: README.md  go.mod
sdk-go/consumer/: consumer.go
sdk-go/examples/: consumer_example.go  producer_example.go
sdk-go/internal/: connection.go  protocol.go
sdk-go/producer/: producer.go
storage/: CMakeLists.txt
storage/ffi/: bridge.cpp  bridge.h
storage/include/: log_engine.h  segment.h
storage/src/: index.cpp  log_engine.cpp  mmap_file.cpp  segment.cpp
storage/tests/: CMakeLists.txt  test_log_engine.cpp
