[package]
name = "streamforge-broker"
version = "0.1.0"
edition = "2021"

[features]
default = ["cpp_storage"]
cpp_storage = []

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
prost = "0.11"
prost-build = "0.11"
tonic = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "5"
metrics = "0.20"
metrics-exporter-prometheus = "0.11"

[build-dependencies]
prost-build = "0.11"
tonic-build = "0.9"

[[bin]]
name = "broker"
path = "src/main.rs"

[lib]
name = "streamforge_broker"
path = "src/lib.rs"
